Fix overflow 1.4

--- a/style.css
+++ b/style.css
@@ -35,13 +35,20 @@ background: linear-gradient(75deg, rgba(255,240,164,1) 0%, rgba(241,104,150,1) 3
 #Projects{
     overflow-x: auto;
 }
-/* 
-@media (max-width: 576px) {
-    #Projects{
-        width: 300px;
-        height: 200px;
-    }   
-} */
+
+@media (max-width: 700px) {
+    .documentation-carousel{
+        width: 500px;
+        height: 330px;
+        overflow-x: auto;
+    }
+    
+    .documentation-carousel img{
+        width: 500px;
+        height: 330px;
+        overflow-x: hidden;
+    }
+}
 
 @media (max-width: 576px) {
     .documentation-carousel{
